--- a/src/Models/ml_models.ipynb
+++ b/src/Models/ml_models.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ml_models.ipynb\n",
+    "- Implementation of Logistic Regression, Random Forest Classifier, Decision Tree Classifier, Gradient Boosting Classifier.\n",
+    "- It aims to perform the evaluation and comparison of various machine learning models on three different datasets (dataset_v1, dataset_v2, and dataset_v3).\n",
+    "- For each fold in the K-Fold and Stratified K-Fold Cross Validation, the script trains each of these models on the training set and evaluates their performance on the test set. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,6 +43,18 @@
     "from Shared.DataService import DataService\n",
     "\n",
     "from Datasets.DataCreation import getDatasetV1, getDatasetV2, getDatasetV3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of the provided code is to facilitate the initialization of various machine learning classifiers based on a given model type.\n",
+    "\n",
+    "Psuedocode:\n",
+    "- The provided code defines a dictionary called model_dict, which maps strings to corresponding machine learning classifier classes. \n",
+    "- It also defines a function called model_initializer, which initializes and returns an instance of a specified classifier based on the given model_type."
    ]
   },
   {
@@ -92,6 +114,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of the provided code is to evaluate multiple machine learning models using k-fold cross-validation. \n",
+    "\n",
+    "Psuedocode:\n",
+    "- It takes input features X and corresponding labels y and performs k-fold cross-validation on the data. \n",
+    "- For each fold, it trains different machine learning classifiers from the model_dict, evaluates their performance using various metrics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -116,6 +150,18 @@
     "            # plt.plot(fpr, tpr, marker=\".\")\n",
     "            print(\"auc score: \", auc_)\n",
     "        print(f\"End the fold {i}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of the provided code is to evaluate multiple machine learning models using stratified k-fold cross-validation. \n",
+    "\n",
+    "Psuedocode:\n",
+    "- It takes input features X and corresponding labels y as NumPy arrays and performs stratified k-fold cross-validation on the data. \n",
+    "- For each fold, it trains different machine learning classifiers from the model_dict, evaluates their performance using various metrics."
    ]
   },
   {
@@ -148,7 +194,19 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "\n",
+    "- The purpose of this code is to experiment on different datasets with different models.\n",
+    "\n",
+    "Psuedocode :\n",
+    "- This code first prepares the input features and target labels from the dataset. \n",
+    "- It proceeds to evaluate multiple machine learning models using both k-fold cross-validation and stratified k-fold cross-validation with 5 folds on different datasets."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,7 +229,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,13 +245,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Stratified KFold\n",
     "\n",
-    "KFold validation does not preserve the split of the output variable while splitting the data. For example, it is possible that if we have ten samples where 5 of them has incidence = True, and 5 of them has incidence = False, KFold can randomly put all positive (incidence = True) in 1 bin and all negative in another bin. To avoid that, we can use Stratified KFold - preserve the split in the original dataset in training dataset."
+    "Note :\n",
+    "- KFold validation does not preserve the split of the output variable while splitting the data. For example, it is possible that if we have ten samples where 5 of them has incidence = True, and 5 of them has incidence = False, KFold can randomly put all positive (incidence = True) in 1 bin and all negative in another bin. To avoid that, we can use Stratified KFold - preserve the split in the original dataset in training dataset."
    ]
   },
   {
@@ -207,7 +264,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,7 +304,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
