--- a/src/models/classifiers.ipynb
+++ b/src/models/classifiers.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# classifiers.ipynb\n",
+    "\n",
+    "- It experiments with machine learning models ([Random Forest Classifier](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) and [Support Vector Machine](https://scikit-learn.org/stable/modules/svm.html)) on different datasets.\n",
+    "- The goal is to evaluate the performance of these models with and without certain features (ergot-related predictors) to predict specific targets (\"ergot_present_in_q3\", \"ergot_present_in_q4\", \"sum_severity_in_q3\", \"sum_severity_in_q4\") in the datasets.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,6 +26,15 @@
     "sys.path.append(\"../\")\n",
     "from datasets.setCreator import SetCreator  # type: ignore\n",
     "from datasets.setModifier import SetModifier  # type: ignore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "\n",
+    "- it defines lists of hyperparameters for the Random Forest Classifier and Support Vector Machine, filters out unnecessary warning messages, and prepares the datasets using a custom data set creator."
    ]
   },
   {
@@ -55,6 +75,26 @@
    "metadata": {},
    "source": [
     "# RandomForestClassifiers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to test and evaluate the performance of a Random Forest Classifier on multiple datasets with a specified predictor variable, considering different combinations of hyperparameters (N_ESTIMATORS and MAX_DEPTH). \n",
+    "- It aims to find the best model (in terms of the Area Under the ROC Curve - AUC) among the tested combinations.\n",
+    "\n",
+    "Psuedocode:\n",
+    "\n",
+    "- Loops through different datasets. \n",
+    "- Test Random Forest Classifier model with different hyperparameters.\n",
+    "- Checks for the highest auc score.\n",
+    "\n",
+    "Note :\n",
+    "- A bunch of decision trees chosen at random and then merged together based on scoring - created visualizations of this\n",
+    "- Prone to overfittin, hyperparameters are a must\n",
+    "- One of the most powerful algorithms"
    ]
   },
   {
@@ -104,6 +144,21 @@
     "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Classifier\"\n",
     "    )\n",
     "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to test and evaluate the performance of a Random Forest Classifier on multiple datasets with a specified predictor variable, considering different combinations of hyperparameters (N_ESTIMATORS and MAX_DEPTH). \n",
+    "- It aims to find the best model (in terms of the Area Under the ROC Curve - AUC) among the tested combinations.\n",
+    "\n",
+    "Psuedocode:\n",
+    "\n",
+    "- Loops through different datasets. \n",
+    "- Train Random Forest Classifier model with different hyperparameters.\n",
+    "- Checks for the highest auc score."
    ]
   },
   {
@@ -235,6 +290,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- The purpose of this code is to test and find the best configuration for a Linear Support Vector Machine (SVM) classifier with different values of the regularization parameter 'C' on various datasets.\n",
+    "- It aims to find the best model (in terms of the Area Under the ROC Curve - AUC) among the tested combinations.\n",
+    "\n",
+    "Psuedocode : \n",
+    "- Loops through different datasets. \n",
+    "- Train Support Vector Machine model with different hyperparameters.\n",
+    "- Checks for the highest auc score.\n",
+    "\n",
+    "Note :\n",
+    "- SVM better for smaller datasets, vulnerable to noise - therefore using feature reduction first\n",
+    "- works even worse if lots of zero values\n",
+    "- Handles outliers great - soft margines"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -283,6 +357,20 @@
     "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the linear SVM Classifier\"\n",
     "    )\n",
     "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- The purpose of this code is to test and find the best configuration for a Support Vector Machine (SVM) classifier with a polynomial kernel on various datasets. It iterates through a list of datasets.\n",
+    "- It aims to find the best model (in terms of the Area Under the ROC Curve - AUC) among the tested combinations.\n",
+    "\n",
+    "Psuedocode : \n",
+    "- Loops through different datasets. \n",
+    "- Trains the classifier using different values of the regularization parameter 'C' and the polynomial degree 'deg', evaluates the performance using the AUC (Area Under the Receiver Operating Characteristic Curve) metric.\n",
+    "- Checks for the highest auc score."
    ]
   },
   {
@@ -336,6 +424,20 @@
     "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the poly kernal SVM Classifier\"\n",
     "    )\n",
     "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- The purpose of this code is to test and find the best configuration for a Support Vector Machine (SVM) classifier with a radial basis function (RBF) kernel on various datasets.\n",
+    "- It aims to find the best model (in terms of the Area Under the ROC Curve - AUC) among the tested combinations.\n",
+    "\n",
+    "Psuedocode : \n",
+    "- Loops through different datasets. \n",
+    "- Trains the classifier using different values of the regularization parameter 'C' and the kernel coefficient 'gamma', evaluates the performance using the AUC (Area Under the Receiver Operating Characteristic Curve) metric.\n",
+    "- Checks for the highest auc score."
    ]
   },
   {
