--- a/src/models/dimReduction.ipynb
+++ b/src/models/dimReduction.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# dimReduction.ipynb\n",
+    "- Implementing combination of data preprocessing and feature selection for different datasets using Random Forest Classifier and feature reduction techniques (PCA and Gaussian Random Projection). \n",
+    "- It aims to identify relevant components for the datasets using PCA, reduce the dataset dimensions using Gaussian Random Projection, and perform feature selection using the Recursive Feature Elimination with Cross-Validation (RFECV) algorithm in conjunction with a Random Forest Classifier.\n",
+    "\n",
+    "Note :\n",
+    "- It outputs new data entirely, not garunteed better results - accounts for variance does not care about features themselves"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,6 +29,14 @@
     "sys.path.append(\"../\")\n",
     "from datasets.setCreator import SetCreator\n",
     "from datasets.setModifier import SetModifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : \n",
+    "- It filters out unnecessary warning messages, and prepares the datasets using a custom data set creator."
    ]
   },
   {
@@ -41,6 +61,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- performs Principal Component Analysis ([PCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html)) on each dataset.\n",
+    "- The PCA is used to reduce the dimensionality of the dataset and identify relevant components that explain the most variance in the data.\n",
+    "\n",
+    "Psuedocode :\n",
+    "- Loops over each dataset.\n",
+    "- Creates PCA class.\n",
+    "- Train model with current dataset.\n",
+    "- Get relevant components and explained variance ratio of each principal component. \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -60,6 +96,22 @@
    "metadata": {},
    "source": [
     "Gaussian Projection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- It applies [Gaussian Random Projection](https://scikit-learn.org/stable/modules/random_projection.html) to reduce the dimensionality of the training data for each dataset. \n",
+    "\n",
+    "Psuedocode :\n",
+    "- Loop through datasets.\n",
+    "- Create an instance of the GaussianRandomProjection class with a random state of 0 and sets the number of components to 25. \n",
+    "- Fit the Gaussian Random Projection model to the training data of the current dataset and performs the actual random projection to reduce the dimensionality. \n",
+    "\n",
+    "Note: \n",
+    "- The n_components parameter determines the desired reduced dimensionality of the dataset."
    ]
   },
   {
@@ -110,6 +162,25 @@
    "metadata": {},
    "source": [
     "runs it exactly once"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- Perform feature selection using Recursive Feature Elimination with Cross-Validation (RFECV) in combination with a Random Forest Classifier. \n",
+    "- The goal is to identify the best subset of features that optimizes the classifier's performance.\n",
+    "\n",
+    "Psuedocode :\n",
+    "- Loop through the dataset.\n",
+    "- Retrieve the training data and extract the target variable from the training data.\n",
+    "- Create an instance of the RandomForestClassifier class with specific hyperparameters.\n",
+    "- Create an instance of the [RFECV](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.RFECV.html) class, which performs Recursive Feature Elimination with Cross-Validation using the given Random Forest Classifier model as the estimator.\n",
+    "- Fit the RFECV model to the training data and retrieve the subset of features that were selected as the best subset by RFECV.\n",
+    "\n",
+    "Note : \n",
+    "- The n_jobs parameter specifies the number of CPU cores to use during cross-validation."
    ]
   },
   {
