--- a/src/models/classifiers.ipynb
+++ b/src/models/classifiers.ipynb
@@ -92,7 +92,8 @@
     "- Checks for the highest auc score.\n",
     "\n",
     "Note :\n",
-    "- A bunch of decision trees chosen at random and then merged together based on scoring - created visualizations of this\n",
+    "- The difference between the two functions lies in how they handle the datasets: one function removes ergot-related predictors before training, while the other keeps them.\n",
+    "- A bunch of decision trees chosen at random and then merged together based on scoring.\n",
     "- Prone to overfittin, hyperparameters are a must\n",
     "- One of the most powerful algorithms"
    ]
@@ -144,21 +145,6 @@
     "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested on the Random Forest Classifier\"\n",
     "    )\n",
     "    print(f\"The best model, as per roc, was:\\n {bestModel}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Purpose:\n",
-    "- The purpose of this function is to test and evaluate the performance of a Random Forest Classifier on multiple datasets with a specified predictor variable, considering different combinations of hyperparameters (N_ESTIMATORS and MAX_DEPTH). \n",
-    "- It aims to find the best model (in terms of the Area Under the ROC Curve - AUC) among the tested combinations.\n",
-    "\n",
-    "Psuedocode:\n",
-    "\n",
-    "- Loops through different datasets. \n",
-    "- Train Random Forest Classifier model with different hyperparameters.\n",
-    "- Checks for the highest auc score."
    ]
   },
   {
