--- a/src/models/regression.ipynb
+++ b/src/models/regression.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# regression.ipynb\n",
+    " \n",
+    "- Experiments on several regression models on different datasets to predict target variables (percnt_true and sum_severity) using different sets of features. \n",
+    "- The models include Random Forest Regression and Support Vector Machine (SVM) Regression with different kernel functions (linear, polynomial, and radial basis function (RBF)).\n",
+    "\n",
+    "Note:\n",
+    "- correlations between variables = bad therefore doing feature reduction to work around"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,6 +28,15 @@
     "sys.path.append(\"../\")\n",
     "from datasets.setCreator import SetCreator\n",
     "from datasets.setModifier import SetModifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "\n",
+    "- it defines lists of hyperparameters for the Random Forest Classifier and Support Vector Machine, filters out unnecessary warning messages, and prepares the datasets using a custom data set creator."
    ]
   },
   {
@@ -55,6 +77,23 @@
    "metadata": {},
    "source": [
     "# RandomForestRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose: \n",
+    "- The purpose of this function is to run Random Forest Regression on a given dataset while performing feature selection using Recursive Feature Elimination with Cross-Validation (RFECV). \n",
+    "- The function aims to find the best combination of hyperparameters for the Random Forest model that maximizes the average accuracy on the provided dataset.\n",
+    "\n",
+    "Psuedocode:\n",
+    "- Loops through different datasets. \n",
+    "- Test [Random Forest Regressor](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html) model with different hyperparameters.\n",
+    "- Checks for the highest auc score.\n",
+    "\n",
+    "Note:\n",
+    "- The difference between the two functions lies in how they handle the datasets: one function removes ergot-related predictors before training, while the other keeps them."
    ]
   },
   {
@@ -211,6 +250,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- The purpose of this code is to test and find the best configuration for a Linear [Support Vector Machine (SVM) regression](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html).\n",
+    "- The function aims to find the best value for the hyperparameter C, which controls the trade-off between achieving a low training error and a low testing error, and maximizes the average accuracy on the provided dataset.\n",
+    "\n",
+    "Psuedocode : \n",
+    "- Loops through different datasets. \n",
+    "- Train Support Vector Machine model with different hyperparameters.\n",
+    "- Checks for the highest auc score.\n",
+    "\n",
+    "Note :\n",
+    "- The difference between the two functions lies in how they handle the datasets: one function removes ergot-related predictors before training, while the other keeps them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -259,6 +315,20 @@
     "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested with linear SVM Regression\"\n",
     "    )\n",
     "    print(f\"The best model, as per avg_accuracy, was:\\n {bestModel}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- The purpose of this code is to test and find the best configuration for a Support Vector Machine (SVM) regression with a polynomial kernel on various datasets. It iterates through a list of datasets.\n",
+    "- It aims to find the best model (in terms of the Area Under the ROC Curve - AUC) among the tested combinations.\n",
+    "\n",
+    "Psuedocode : \n",
+    "- Loops through different datasets. \n",
+    "- Trains the classifier using different values of the regularization parameter 'C' and the polynomial degree 'deg', evaluates the performance using the AUC (Area Under the Receiver Operating Characteristic Curve) metric.\n",
+    "- Checks for the highest auc score."
    ]
   },
   {
@@ -312,6 +382,20 @@
     "        f\"[{numCombinations - numExcludedSets}/{numCombinations}] sets were tested with poly kernal SVM Regression\"\n",
     "    )\n",
     "    print(f\"The best model, as per avg_accuracy, was:\\n {bestModel}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- The purpose of this code is to test and find the best configuration for a Support Vector Machine (SVM) regression with a radial basis function (RBF) kernel on various datasets.\n",
+    "- It aims to find the best model (in terms of the Area Under the ROC Curve - AUC) among the tested combinations.\n",
+    "\n",
+    "Psuedocode : \n",
+    "- Loops through different datasets. \n",
+    "- Trains the classifier using different values of the regularization parameter 'C' and the kernel coefficient 'gamma', evaluates the performance using the AUC (Area Under the Receiver Operating Characteristic Curve) metric.\n",
+    "- Checks for the highest auc score."
    ]
   },
   {
