--- a/src/Models/KNN.ipynb
+++ b/src/Models/KNN.ipynb
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Datasets.DataCreation import getDatasetV1, getDatasetV2, getDatasetV3, getDatasetV4  # type: ignore\n"
+    "from Datasets.DataCreation import getDatasetV1, getDatasetV2, getDatasetV3, getDatasetV4  # type: ignore"
    ]
   },
   {
