--- a/src/Models/Boost/Boost.ipynb
+++ b/src/Models/Boost/Boost.ipynb
@@ -388,6 +388,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : \n",
+    "- Train the models on data and predict the target variables.\n",
+    "- Evaluate the metrics retrieved."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -395,16 +404,6 @@
    "source": [
     "gradient_boosting_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
     "balanced_gradient_boosting_model.fit(balancedTrainDfX, balancedTrainDfY)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Purpose : \n",
-    "- Train the models on data and predict the target variables.\n",
-    "- Evaluate the metrics retrieved."
    ]
   },
   {
@@ -425,6 +424,13 @@
    "source": [
     "xgboost_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
     "balanced_xgboost_model.fit(balancedTrainDfX, balancedTrainDfY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "eval procedure"
    ]
   },
   {
@@ -476,6 +482,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "print model performance metrics on test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -499,21 +512,6 @@
     "    \"imb XGB balanced train set\", testDf[\"downgrade\"], predictions_balanced_xgboost\n",
     ")"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "print model performance metrics on test data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
