--- a/src/Models/Boost/BoostSatellite.ipynb
+++ b/src/Models/Boost/BoostSatellite.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Boost.ipynb\n",
     "- Implementation for building, training, and evaluating machine learning models for a specific classification task using various ensemble methods like Gradient Boosting, RUSBoost, and XGBoost. \n",
-    "- The task involves predicting the \"downgrade\" label from a given satellite data."
+    "- The task involves predicting the \"downgrade\" label from a given dataset."
    ]
   },
   {
