--- a/src/Models/Forest/ForestSatellitePrevErg.ipynb
+++ b/src/Models/Forest/ForestSatellitePrevErg.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# ForestSatellitePrevErg.ipynb\n",
     "- Implementation for building, training, and evaluating machine learning models for a specific classification task using various ensemble methods like Random Forest and XGBoost. \n",
-    "- The task involves predicting the \"downgrade\" label from a given satellite dataset."
+    "- The task involves predicting the \"downgrade\" label from a given dataset."
    ]
   },
   {
