--- a/src/Models/Boost/BoostSatellite.ipynb
+++ b/src/Models/Boost/BoostSatellite.ipynb
@@ -305,6 +305,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- Function to print metrics retrieved from training the model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
