added evauation documentation and dimReduction instructions

--- a/src/models/dimReduction.ipynb
+++ b/src/models/dimReduction.ipynb
@@ -9,7 +9,8 @@
     "- It aims to identify relevant components for the datasets using PCA, reduce the dataset dimensions using Gaussian Random Projection, and perform feature selection using the Recursive Feature Elimination with Cross-Validation (RFECV) algorithm in conjunction with a Random Forest Classifier.\n",
     "\n",
     "Note :\n",
-    "- It outputs new data entirely, not garunteed better results - accounts for variance does not care about features themselves"
+    "- Both PCA and Gaussian Random Projection output entirely new attributes and neither are garunteed to improve the mode\n",
+    "- Feature Importance with RFECV can be used to get the names of the most relevant attributes (but can take awhile)"
    ]
   },
   {
@@ -35,8 +36,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Purpose : \n",
-    "- It filters out unnecessary warning messages, and prepares the datasets using a custom data set creator."
+    "Purpose:  \n",
+    "Silences warnings for cleaner output and loads datasets and dataset modifiers for analysis"
    ]
   },
   {
@@ -71,9 +72,8 @@
     "Psuedocode :\n",
     "- Loops over each dataset.\n",
     "- Creates PCA class.\n",
-    "- Train model with current dataset.\n",
-    "- Get relevant components and explained variance ratio of each principal component. \n",
-    "\n"
+    "- Train model with current dataset\n",
+    "- Get relevant components and explained variance ratio of each principal component. "
    ]
   },
   {
@@ -132,7 +132,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### From the book\n",
+    "### [From the book](https://www.amazon.ca/Cleaning-Data-Effective-Science-command-line/dp/1801071292/ref=sr_1_1?keywords=data+cleaning&sr=8-1)\n",
+    "\n",
+    "This code snippet helps determine the name of the most relevant attributes in a model, however it is resource demanding and therefore is modified into the scripts below\n",
     "\n",
     "```\n",
     "for currData in dataset1:\n",
@@ -168,19 +170,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Purpose :\n",
+    "Purpose:  \n",
     "- Perform feature selection using Recursive Feature Elimination with Cross-Validation (RFECV) in combination with a Random Forest Classifier. \n",
     "- The goal is to identify the best subset of features that optimizes the classifier's performance.\n",
     "\n",
-    "Psuedocode :\n",
+    "Psuedocode:  \n",
     "- Loop through the dataset.\n",
     "- Retrieve the training data and extract the target variable from the training data.\n",
     "- Create an instance of the RandomForestClassifier class with specific hyperparameters.\n",
     "- Create an instance of the [RFECV](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.RFECV.html) class, which performs Recursive Feature Elimination with Cross-Validation using the given Random Forest Classifier model as the estimator.\n",
     "- Fit the RFECV model to the training data and retrieve the subset of features that were selected as the best subset by RFECV.\n",
     "\n",
-    "Note : \n",
-    "- The n_jobs parameter specifies the number of CPU cores to use during cross-validation."
+    "Note:   \n",
+    "- The RFECV process is ran exactly once in the snippet below\n",
+    "- The n_jobs parameter specifies the number of CPU cores to use during cross-validation.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Using the snippet for feature analysis**:  \n",
+    "- Change the dataset to whichever dataset youd like to use in the following line:  \n",
+    "```for currData in dataset1:```  \n",
+    "- Set the target in the following line (give the name of the column):  \n",
+    "```trainY = trainningData[\"ergot_present_in_q4\"]```  \n",
+    "- Remove all Ergot features or only other predictors in the following line:  \n",
+    "```trainX = setModifier.rmErgotPredictors(trainningData)``` which can also be replaced with ```trainX = setModifier.rmErgotFeatures(trainningData)```"
    ]
   },
   {
@@ -196,13 +209,14 @@
     "\n",
     "    try:\n",
     "        model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=0)\n",
-    "        rfecv = RFECV(\n",
-    "            estimator=model, n_jobs=1\n",
-    "        )  # apply feature elimination/cross-validation to model\n",
+    "\n",
+    "        # apply feature elimination/cross-validation to model\n",
+    "        rfecv = RFECV(estimator=model, n_jobs=1)\n",
+    "\n",
     "        best_feat = rfecv.fit(trainX, trainY)\n",
-    "        X_support = trainX.loc[\n",
-    "            :, best_feat.support_\n",
-    "        ]  # X_support now automatically holds the best subset\n",
+    "\n",
+    "        # X_support now automatically holds the best subset\n",
+    "        X_support = trainX.loc[:, best_feat.support_]\n",
     "\n",
     "        print(\"[SUCCESS]\")\n",
     "        print(X_support.shape)  # tells you the best dimensions to use\n",
@@ -217,7 +231,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run it multiple times to see when it would stop"
+    "Purpose:  \n",
+    "- Perform feature selection using Recursive Feature Elimination with Cross-Validation (RFECV) in combination with a Random Forest Classifier. \n",
+    "- The goal is to identify the best subset of features that optimizes the classifier's performance.\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Loop through the dataset.\n",
+    "- Retrieve the training data and extract the target variable from the training data.\n",
+    "- Create an instance of the RandomForestClassifier class with specific hyperparameters.\n",
+    "- Create an instance of the [RFECV](https://scikit-learn.org/stable/modules/generated/sklearn.feature_selection.RFECV.html) class, which performs Recursive Feature Elimination with Cross-Validation using the given Random Forest Classifier model as the estimator.\n",
+    "- Fit the RFECV model to the training data and retrieve the subset of features that were selected as the best subset by RFECV.\n",
+    "\n",
+    "Note:   \n",
+    "- The RFECV process is looped until no further changes are made between two iterrations (this can take awhile)\n",
+    "- The n_jobs parameter specifies the number of CPU cores to use during cross-validation.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Using the snippet for feature analysis**:  \n",
+    "- Change the dataset to whichever dataset youd like to use in the following line:  \n",
+    "```for currData in dataset1:```  \n",
+    "- Set the target in the following line (give the name of the column):  \n",
+    "```trainY = trainningData[\"ergot_present_in_q4\"]```  \n",
+    "- Remove all Ergot features or only other predictors in the following line:  \n",
+    "```trainX = setModifier.rmErgotPredictors(trainningData)``` which can also be replaced with ```trainX = setModifier.rmErgotFeatures(trainningData)```"
    ]
   },
   {
@@ -232,19 +269,21 @@
     "    trainX = setModifier.rmErgotFeatures(trainningData)\n",
     "\n",
     "    reducable = True  # controls the loop, is true by default then is determined by\n",
+    "\n",
     "    # comparing the calculated set of features against the current set of features\n",
     "    try:\n",
     "        while reducable:\n",
     "            model = RandomForestClassifier(\n",
     "                n_estimators=100, max_depth=5, random_state=0\n",
     "            )\n",
-    "            rfecv = RFECV(\n",
-    "                estimator=model, n_jobs=1\n",
-    "            )  # apply feature elimination/cross-validation to model\n",
+    "\n",
+    "            # apply feature elimination/cross-validation to model\n",
+    "            rfecv = RFECV(estimator=model, n_jobs=1)\n",
+    "\n",
     "            best_feat = rfecv.fit(trainX, trainY)\n",
-    "            X_support = trainX.loc[\n",
-    "                :, best_feat.support_\n",
-    "            ]  # X_support now automatically holds the best subset\n",
+    "\n",
+    "            # X_support now automatically holds the best subset\n",
+    "            X_support = trainX.loc[:, best_feat.support_]\n",
     "\n",
     "            # reduce the set to the subset proposed by the best features if we can\n",
     "            if X_support.shape < trainX.shape:\n",
